# author-endorser-wizards

./: .gitignore  AuthorWizard.py  Dockerfile  EndorserWizard.py  README.md  author-docker-file  author-docker-file.txt  author-endorser-uml.md  docker wrapper command for author endorser.txt  endorser-docker-file  pyproject.toml
author/: author.py
author-endorser-wizards v0.4/: AuthorWizard.py  EndorserWizard.py
endorser/: endorser.py
tests/: test_author.py
